# pling

./: .astylerc  .gitignore  README.md  meson.build
data/: fonts
data/controllers/: 0218:0401  0218:0402  0218:0403  0763:1050  0763:3111  09e8:0045  0a4d:129d  1235:0036  1397:00c7  2467:2018  2af4:0700  default
data/programs/bank-0/: 0.yaml  1.yaml  2.yaml  3.yaml  4.yaml  5.yaml  64.yaml
doc/: ANTI-ALIASING.md  ARCHITECTURE.md  FEATURES.md  GUI.md  NRPN.md  SYNTHS.md  UI.md  VISUALIZATION.md
src/: clock.cpp  clock.hpp  config.cpp  config.hpp  controller.cpp  controller.hpp  envelope.cpp  envelope.hpp  filter.cpp  filter.hpp  imgui_impl_sdl.cpp  learn.cpp  meson.build  midi.cpp  midi.hpp  oscillator.hpp  oscilloscope.cpp  oscilloscope.hpp  pling.cpp  pling.hpp  program-manager.cpp  program-manager.hpp  program.hpp  shader.cpp  shader.hpp  simple.cpp  simple.hpp  spectrum.cpp  spectrum.hpp  state.cpp  state.hpp  text.cpp  text.hpp  ui.cpp  ui.hpp  utils.hpp  view.hpp  voice-manager.hpp  widget.hpp
src/curves/: keyboard-scaling-dx7.cpp  keyboard-scaling-dx7.hpp  velocity-scaling-dx7.cpp  velocity-scaling-dx7.hpp
src/envelopes/: bimodal-dx7.cpp  bimodal-dx7.hpp  exponential-adsr.cpp  exponential-adsr.hpp  exponential-dx7.cpp  exponential-dx7.hpp  linear-adsr.cpp  linear-adsr.hpp  linear-dx7.cpp
src/filters/: biquad.cpp  biquad.hpp  state-variable.cpp  state-variable.hpp
src/oscillators/: basic.hpp  pm.hpp
src/programs/: karplus-strong.cpp  karplus-strong.hpp  octalope.cpp  octalope.hpp  simple.cpp  simple.hpp  voice-manager.hpp
src/widgets/: oscilloscope.cpp  oscilloscope.hpp  spectrum.cpp  spectrum.hpp
