executable('pling',
	'envelopes/exponential-adsr.cpp',
	'midi.cpp',
	'pling.cpp',
	'programs/simple.cpp',
	'shader.cpp',
	'text.cpp',
	'ui.cpp',
	'widgets/oscilloscope.cpp',
	'widgets/spectrum.cpp',
	dependencies: [
		alsa,
		fftw3f,
		fmtlib,
		gl,
		glm,
		sdl2,
		sdl2_ttf,
		threads,
	],
	cpp_args: '-DGL_GLEXT_PROTOTYPES=1',
	install: true
)
